# ZeroG

./: .gitignore  CMakeLists.txt  README.md
3rd/benchmark/cmake/: HandleGTest.cmake
3rd/glfw-3.2.1/src/: linux_joystick.c
3rd/vulkan_sdk/etc/explicit_layer.d/: VkLayer_api_dump.json  VkLayer_core_validation.json  VkLayer_device_simulation.json  VkLayer_monitor.json  VkLayer_object_tracker.json  VkLayer_parameter_validation.json  VkLayer_screenshot.json  VkLayer_threading.json  VkLayer_unique_objects.json  VkLayer_vktrace_layer.json
3rd/vulkan_sdk/include/libshaderc/: shaderc.h  shaderc.hpp
3rd/vulkan_sdk/lib/: libvulkan.so.1  libvulkan.so.1.0.61
Bench/: CMakeLists.txt  main.cpp
Dummy/: CMakeLists.txt  main.cpp
ZeroG/: CMakeLists.txt  engine.cpp  engine.h  types.h
ZeroG/Common/: CMakeLists.txt  hash.h  types.h
ZeroG/Renderer/: CMakeLists.txt  common.h  renderer.cpp  renderer.h
ZeroG/Renderer/freeglut/src/: fg_font_data.c
ZeroG/Utils/: CMakeLists.txt  log.cpp  log.h  memz.cpp  memz.h  memz2.cpp  memz2.h
ZeroG/internal/: pipeline_store.cpp  pipeline_store.h
dummy/: CMakeLists.txt  main.cpp
zerog/: CMakeLists.txt  engine.cpp  engine.h  info.h
zerog/common/: CMakeLists.txt  bitop.h  math.h  types.h  zerog_def.h
zerog/common/tests/: CMakeLists.txt  main.cpp  tst_common.h
zerog/memory/: CMakeLists.txt  memory.cpp  memory.h
zerog/memory/bench/: CMakeLists.txt  main.cpp
zerog/memory/tests/: CMakeLists.txt  main.cpp  tst_memory.h
zerog/renderer/: CMakeLists.txt  renderer.cpp  renderer.h  types.h
zerog/renderer/vk/: initializer.cpp  initializer.h
zerog/utils/: CMakeLists.txt  bitop.h
zerog/utils/containers/: array.h
